# screenshot

./: .rules  BUTTON_FIX_SUMMARY.md  BUTTON_FUNCTIONALITY.md  CHANGELOG.md  Cargo.toml  FEATURE_SUMMARY.md  FINAL_FIX_SUMMARY.md  LICENSE  README.md  RECTANGLE_SELECTION.md  TRANSPARENCY_FIX.md  build.rs  flint.desktop  flint.toml  install.sh  prd.md
src/: capture.rs  editor.rs  main.rs  tools.rs  ui.rs  window_manager.rs
