[package]
name = "flint"
version = "1.0.0"
edition = "2021"
description = "A high-performance, native screenshot and annotation utility for Linux"
authors = ["Flint Team"]
license = "MIT"

[dependencies]
gtk4 = "0.8"
gdk4 = "0.8"
cairo-rs = "0.19"
gio = "0.19"
glib = "0.19"
ashpd = "0.7"
screenshots = "0.7"
image = "0.24"

anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
arboard = "3.2"
x11rb = { version = "0.13", features = ["all-extensions"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client"], optional = true }

[dependencies.gdk4-wayland]
version = "0.8"
optional = true

[dependencies.gdk4-x11]
version = "0.8"
optional = true

[features]
default = ["wayland", "x11"]
wayland = ["dep:gdk4-wayland", "dep:wayland-client", "dep:wayland-protocols"]
x11 = ["dep:gdk4-x11", "dep:x11rb"]

[[bin]]
name = "flint"
path = "src/main.rs"
